# cheval

./: .gitignore  Cargo.toml  FONT.md  Justfile  Makefile  README.md  TODO.md  build.rs  example_config.yaml  test_config.yaml  text_test_config.yaml
.cargo/: config
.github/workflows/: build_and_test.yml  build_rasppi_package.yaml  publish_crate.yml
benches/: next_frame_benchmark.rs
data/: atemrust_banner_content.txt  atemrust_config.yaml  banner-test.xcf  banner-title.xcf  banner.xcf  banner_content.txt  banner_line_0.txt  banner_line_1.txt  banner_next_config.yaml  banner_next_content.txt  banner_title.txt  countdown_config.yaml  frametime_test_config.yaml  image_config.yaml  just_chatting_config.yaml  multipage_demo_config.yaml  text_test_config.yaml
data/just_chatting/: banner_content.txt
docs/: napkin_math.md
examples/fonts/: ATTRIBUTION.md
examples/fonts/blogger-sans/: Creative Commons No Derivatives.txt
examples/multipage/: multipage_config.yaml
src/: axisalignedrectangle.rs  bakedexpression.rs  block_element.rs  cheval.rs  cheval_main.rs  context.rs  control.rs  countdown_element.rs  element.rs  element_instance.rs  file_cache.rs  http_api_actix.rs  http_api_axum.rs  image_element.rs  image_sequence.rs  lib.rs  lissajous_element.rs  loadtext_element.rs  page.rs  pixel.rs  render_buffer.rs  render_context.rs  scrolltext_element.rs  soundbank_element.rs  text_element.rs  timer_element.rs  variable.rs  window.rs  window_framebuffer.rs  window_minifb.rs
src/window/: window_framebuffer.rs  window_layout.rs  window_minifb.rs  window_png.rs
