[package]
name = "cheval"
version = "0.1.3"
authors = ["Andreas Neukoetter <andreas@omni-mad.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"
description = "A tool to render stream overlays, or smart mirror content, or just images."
readme = "README.md"
homepage = "https://github.com/AndreasOM/cheval"
repository = "https://github.com/AndreasOM/cheval"
keywords = ["tools", "overlay", "streaming"]
categories = ["graphics"]

[[bin]]
name="cheval"
path="src/cheval_main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
image = "0.23.8"
rusttype = "0.9.2"
regex = "1.3.9"
chrono = "0.4.19"
notify = "4.0.15"
async-trait = "0.1.40"
tokio = { version = "0.2.22", features = [ "full", "tracing" ] }
anyhow = "1.0"
clap = "2.33.3"
actix-web = "3.2.0"
hhmmss = "0.1"

expresso = "0.2"
glob = "0.3.0"
termion = "1.5.6"
css-color = "0.1.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
minifb = "0.18.0"
pprof = { version = "0.3", features = ["flamegraph"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
minifb = "0.18.0"


[target.'cfg(target_arch = "arm")'.dependencies]
framebuffer = "0.2.0"
