[package]
name = "cheval"
version = "0.1.3"
authors = ["Andreas Neukoetter <andreas@omni-mad.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"
description = "A tool to render stream overlays, or smart mirror content, or just images."
readme = "README.md"
homepage = "https://github.com/AndreasOM/cheval"
repository = "https://github.com/AndreasOM/cheval"
keywords = ["tools", "overlay", "streaming"]
categories = ["graphics"]

[[bin]]
name="cheval"
path="src/cheval_main.rs"

[features]
default = []
with_termion = [ "termion" ]
with_profiling = [ "pprof", "criterion" ]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
image = "0.23.8"
rusttype = "0.9.2"
regex = "1.3.9"
chrono = "0.4.19"
notify = "4.0.17"
async-trait = "0.1.40"
tokio = { version = "0.2.22", features = [ "full", "tracing" ] }
anyhow = "1.0"
clap = "2.33.3"
actix-web = "4.0.0-rc.2"
hhmmss = "0.1"

expresso = "0.2.5"
glob = "0.3.0"
termion = { version = "1.5.6", optional = true }
css-color = "0.1.1"
oml-audio = "0.2.1"
derivative = "2.2.0"
path-calculate = "0.1.3"
actix-rt = "2.7.0"
futures = "0.3.21"
tracing = "0.1.32"
tracing-subscriber = "0.3.9"

[target.'cfg(target_arch = "x86_64")'.dependencies]
minifb = "0.20.0"
# pprof = { version = "0.3", features = ["flamegraph"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
minifb = "0.20.0"
pprof = { version = "0.6.2", features = ["flamegraph", "criterion"], optional = true }
criterion = { version = "0.3", optional = true }



[build-dependencies]
cfg_aliases = "0.1.0"

[dev-dependencies]
#criterion = "0.3"

[target.'cfg(target_arch = "arm")'.dependencies]
framebuffer = "0.2.0"
#[target.'cfg(target_arch = "arm")'.dev-dependencies]
pprof = { version = "0.6.2", features = ["flamegraph", "criterion"], optional = true }
criterion = { version = "0.3", optional = true }

[[bench]]
name = "next_frame_benchmark"
harness = false


[patch.crates-io]
# minifb = { path = "../rust_minifb" }
minifb = { git = "https://github.com/andreasom/rust_minifb" }
# expresso = { path = "../expresso" }

